--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "Bolg",
   "version": "1.0.0",
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "build": "node  ./build/index.js"
+  }
 }
