--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,6 +23,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
+      env:
+        ACCESS_TOKEN: ${{ secrets.CREATE_README }}
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm run build
