--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: 更新 README.md
 
 on:
   push:
@@ -28,6 +28,18 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm run build
- 
+    
+    - name: Record time  
+      run: echo `date` > date.log
+      
+    - name: Commit and push if changed   # 将README.md更新到仓库
+      run: |
+        git diff
+        git config --global user.email "rliang.c@qq.com"
+        git config --global user.name "ChenRiliang"
+        git add -A
+        git commit -m "Updated Readme" || exit 
+        git push
+        
     - name: done
       run: echo 'done'
